--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 		<script src="script.js" defer></script>
 	</head>
 	<body>
-		<form>
+		<form onsubmit="search()">
 			<label>Title</label>
 			<input id='title' />
 			<label>Instructor</label>
 			<input id='instr' />
-			<label>Subject</label>
-			<input id='subj' />
+			<label>Days</label>
+			<input id='day' />
+			<label>Times</label>
+			<input id='time' />
 			<input type='submit' />
 		</form>
 	</body>
