--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 		<script src="script.js" defer></script>
 	</head>
 	<body>
-		<form autocomplete='off' onsubmit="search()">
+		<form autocomplete='off' onsubmit="searchcourses()">
+			<div class='autocomplete'>
 			<label>Title</label>
 			<input id='title' />
 			<label>Instructor</label>
@@ -21,6 +22,7 @@
 			<label>Times</label>
 			<input id='time' />
 			<input type='submit' />
+			</div>
 		</form>
 	</body>
 </html>
