--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<script src="script.js" defer></script>
 	</head>
 	<body>
-		<form autocomplete='off'>
+		<form id='search' autocomplete='off'>
 			<div class='autocomplete'>
 				<label>Subject</label>
 				<input id='Subj' />
