Add status support

--- a/index.html
+++ b/index.html
@@ -33,7 +33,15 @@
 				<label>Times</label>
 				<input id='start' />
 			</div>
-			<input type='submit' />
+			<label>Status</label>
+			<select id='status'>
+				<option value=''>All
+				<option value='1'>Open</option>
+				<option value='0'>Closed</option>
+			</select>
+			<div id='submit'>
+				<input type='submit' />
+			</div>
 		</form>
 		<div id='results'></div>
 	</body>
