Add start and end time processing

--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
 				<input id='days' />
 			</div>
 			<div class='autocomplete'>
-				<label>Times</label>
+				<label>Start at or After</label>
 				<input id='start' />
+			</div>
+			<div class='autocomplete'>
+				<label>End at or Before</label>
+				<input id='end' />
 			</div>
 			<label>Status</label>
 			<select id='status'>
