Add attribute and COLL

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
 				<input id='Instr' />
 			</div>
 			<div class='autocomplete'>
+				<label>Attribute</label>
+				<input id='Attr' />
+			</div>
+			<div class='autocomplete'>
+				<label>COLL</label>
+				<input id='COLL' />
+			</div>
+			<div class='autocomplete'>
 				<label>Days</label>
 				<input id='days' />
 			</div>
