Add checkboxes for days

--- a/index.html
+++ b/index.html
@@ -33,9 +33,18 @@
 				<label>COLL</label>
 				<input id='COLL' />
 			</div>
-			<div class='autocomplete'>
+			<div id='days' class='autocomplete'>
 				<label>Days</label>
-				<input id='days' />
+				<input type='checkbox' value='M' id='M'/>
+				<label for='M'>Monday</label>
+				<input type='checkbox' value='T' id='T'/>
+				<label for='T'>Tuesday</label>
+				<input type='checkbox' value='W' id='W' />
+				<label for='W'>Wednesday</label>
+				<input type='checkbox' value='R' id='R' />
+				<label for='R'>Thursday</label>
+				<input type='checkbox' value='F' id='F' />
+				<label for='F'>Friday</label>
 			</div>
 			<div class='autocomplete'>
 				<label>Start at or After</label>
