Fix text input styling

--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
 		<form id='search' autocomplete='off'>
 			<div class='autocomplete'>
 				<label>Subject</label>
-				<input id='Subj' />
+				<input type='text' id='Subj' />
 			</div>
 			<div class='autocomplete'>
 				<label>Title</label>
-				<input id='Title' />
+				<input type='text' id='Title' />
 			</div>
 			<div class='autocomplete'>
 				<label>Instructor</label>
-				<input id='Instr' />
+				<input type='text' id='Instr' />
 			</div>
 			<div class='autocomplete'>
 				<label>Attribute</label>
-				<input id='Attr' />
+				<input type='text' id='Attr' />
 			</div>
 			<div class='autocomplete'>
 				<label>COLL</label>
-				<input id='COLL' />
+				<input type='text' id='COLL' />
 			</div>
 			<div id='days' class='autocomplete'>
 				<label>Days</label>
@@ -48,11 +48,11 @@
 			</div>
 			<div class='autocomplete'>
 				<label>Start at or After</label>
-				<input id='start' />
+				<input type='text' id='start' />
 			</div>
 			<div class='autocomplete'>
 				<label>End at or Before</label>
-				<input id='end' />
+				<input type='text' id='end' />
 			</div>
 			<label>Status</label>
 			<select id='status'>
