--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<script src="script.js" defer></script>
 	</head>
 	<body>
-		<h1>W&M Courselister</h1>
+		<h1>W&M Unofficial Courselister</h1>
 		<form id='search' autocomplete='off'>
 			<div class='autocomplete'>
 				<label>Subject</label>
