Add term loading

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	</head>
 	<body>
 		<h1>W&M Unofficial Courselister</h1>
+		<form id='term'>
+		</form>
 		<form id='search' autocomplete='off'>
 			<div class='autocomplete'>
 				<label>Subject</label>
@@ -60,8 +62,8 @@
 				<option value='1'>Open</option>
 				<option value='0'>Closed</option>
 			</select>
-			<div id='submit'>
-				<input type='submit' />
+			<div class='submit'>
+				<input type='submit' value="Search" />
 			</div>
 		</form>
 		<div id='results'></div>
