Indicate which term is loaded

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<h1>W&M Unofficial Courselister</h1>
 		<form id='term'>
 		</form>
+		<h2 id='termname'></h2>
 		<form id='search' autocomplete='off'>
 			<div class='autocomplete'>
 				<label>Subject</label>
