--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h1>W&M Unofficial Courselister</h1>
 		<form id='term'>
 		</form>
-		<h2 id='termname'></h2>
+		<h2 id='termname'>NO TERM LOADED</h2>
 		<form id='search' autocomplete='off'>
 			<div class='autocomplete'>
 				<label>Subject</label>
