Add placeholders to clarify values

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<form id='search' autocomplete='off'>
 			<div class='autocomplete'>
 				<label>Subject</label>
-				<input type='text' id='Subj' />
+				<input type='text' id='Subj' placeholder="e.g. Computer Science" />
 			</div>
 			<div class='autocomplete'>
 				<label>Title</label>
@@ -30,11 +30,11 @@
 			</div>
 			<div class='autocomplete'>
 				<label>Attribute</label>
-				<input type='text' id='Attr' />
+				<input type='text' id='Attr' placeholder='e.g. CSI' />
 			</div>
 			<div class='autocomplete'>
 				<label>COLL</label>
-				<input type='text' id='COLL' />
+				<input type='text' id='COLL' placeholder='e.g. 200' />
 			</div>
 			<div id='days' class='autocomplete'>
 				<label>Days</label>
