update COLL placeholder

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			</div>
 			<div class='autocomplete'>
 				<label>COLL</label>
-				<input type='text' id='COLL' placeholder='e.g. 200' />
+				<input type='text' id='COLL' placeholder='e.g. C200' />
 			</div>
 			<div id='days' class='autocomplete'>
 				<label>Days</label>
