Use full column names

--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 			</div>
 			<div class='autocomplete'>
 				<label>Instructor</label>
-				<input type='text' id='Instr' />
+				<input type='text' id='Instructor' />
 			</div>
 			<div class='autocomplete'>
 				<label>Attribute</label>
-				<input type='text' id='Attr' placeholder='e.g. CSI' />
+				<input type='text' id='Attributes' placeholder='e.g. CSI' />
 			</div>
 			<div class='autocomplete'>
 				<label>COLL</label>
 				<input type='text' id='COLL' placeholder='e.g. C200' />
 			</div>
-			<div id='days' class='autocomplete'>
+			<div id='Days' class='autocomplete'>
 				<label>Days</label>
 				<input type='checkbox' value='M' id='M'/>
 				<label for='M'>Monday</label>
@@ -51,14 +51,14 @@
 			</div>
 			<div class='autocomplete'>
 				<label>Start at or After</label>
-				<input type='text' id='start' />
+				<input type='text' id='Start' />
 			</div>
 			<div class='autocomplete'>
 				<label>End at or Before</label>
-				<input type='text' id='end' />
+				<input type='text' id='End' />
 			</div>
 			<label>Status</label>
-			<select id='status'>
+			<select id='Status'>
 				<option value=''>All
 				<option value='1'>Open</option>
 				<option value='0'>Closed</option>
