Fix Subj to Subject

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<form id='search' autocomplete='off'>
 			<div class='autocomplete'>
 				<label>Subject</label>
-				<input type='text' id='Subj' placeholder="e.g. Computer Science" />
+				<input type='text' id='Subject' placeholder="e.g. Computer Science" />
 			</div>
 			<div class='autocomplete'>
 				<label>Title</label>
