Add more search

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 				<input type='text' id='Title' />
 			</div>
 			<div class='autocomplete'>
+				<label>ID</label>
+				<input type='text' id='ID' />
+			</div>
+			<div class='autocomplete'>
 				<label>Instructor</label>
 				<input type='text' id='Instructor' />
 			</div>
@@ -56,6 +60,22 @@
 			<div class='autocomplete'>
 				<label>End at or Before</label>
 				<input type='text' id='End' />
+			</div>
+			<div class='autocomplete'>
+				<label>Place</label>
+				<input type='text' id='Place' />
+			</div>
+			<div class='autocomplete'>
+				<label>Restrictions</label>
+				<input type='text' id='Restrictions' />
+			</div>
+			<div class='autocomplete'>
+				<label>Prerequisites</label>
+				<input type='text' id='Prerequisites' />
+			</div>
+			<div class='autocomplete'>
+				<label>Corequisites</label>
+				<input type='text' id='Corequisites' />
 			</div>
 			<label>Status</label>
 			<select id='Status'>
