--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@
 			</div>
 			<div class='autocomplete'>
 				<label>Attribute</label>
-				<input type='text' id='Attributes' placeholder='e.g. CSI' />
-			</div>
-			<div class='autocomplete'>
-				<label>COLL</label>
-				<input type='text' id='COLL' placeholder='e.g. C200' />
+				<input type='text' id='Attributes' placeholder='e.g. CSI, C200' />
 			</div>
 			<div id='Days' class='autocomplete'>
 				<label>Days</label>
