index.html: Add/update placeholder text for all search fields

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
 			<form id='search' autocomplete='off'>
 				<div class='autocomplete'>
 					<label>Subject</label>
-					<input type='text' id='Subject' placeholder="e.g. Computer Science" />
+					<input type='text' id='Subject' placeholder='e.g. CSCI' />
 				</div>
 				<div class='autocomplete'>
 					<label>Title</label>
-					<input type='text' id='Title' />
+					<input type='text' id='Title' placeholder='e.g. Data Structures' />
 				</div>
 				<div class='autocomplete'>
 					<label>ID</label>
-					<input type='text' id='ID' />
+					<input type='text' id='ID' placeholder='e.g. 241' />
 				</div>
 				<div class='autocomplete'>
 					<label>Instructor</label>
-					<input type='text' id='Instructor' />
+					<input type='text' id='Instructor' placeholder='e.g. Deverick' />
 				</div>
 				<div class='autocomplete'>
 					<label>Attribute</label>
@@ -51,27 +51,27 @@
 				</div>
 				<div class='autocomplete'>
 					<label>Start at or After</label>
-					<input type='text' id='Start' />
+					<input type='text' id='Start' placeholder="e.g. 900 (for 9:00 AM) or 1500 (for 3:00 PM)" />
 				</div>
 				<div class='autocomplete'>
 					<label>End at or Before</label>
-					<input type='text' id='End' />
+					<input type='text' id='End' placeholder="e.g. 900 (for 9:00 AM) or 1500 (for 3:00 PM)" />
 				</div>
 				<div class='autocomplete'>
 					<label>Place</label>
-					<input type='text' id='Place' />
+					<input type='text' id='Place' placeholder='e.g. McGlothlin-Street'/>
 				</div>
 				<div class='autocomplete'>
 					<label>Restrictions</label>
-					<input type='text' id='Restrictions' />
+					<input type='text' id='Restrictions' placeholder='Certain Major(s) or Social Classes that can/cannot take a class' />
 				</div>
 				<div class='autocomplete'>
 					<label>Prerequisites</label>
-					<input type='text' id='Prerequisites' />
+					<input type='text' id='Prerequisites' placeholder='Other course(s) that must be taken beforehand' />
 				</div>
 				<div class='autocomplete'>
 					<label>Corequisites</label>
-					<input type='text' id='Corequisites' />
+					<input type='text' id='Corequisites' placeholder='Other course(s) that must be taken at the same time' />
 				</div>
 				<label>Status</label>
 				<select id='Status'>
